--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,23 @@
       android:layout_height="0dp"
       android:layout_marginStart="@dimen/activity_horizontal_margin"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
-      android:layout_marginTop="@dimen/activity_vertical_margin"
+      android:layout_marginTop="0dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintBottom_toTopOf="@+id/nav_view"
+      app:layout_constraintBottom_toTopOf="@+id/navigationView"
       >
 
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_home"
+        android:text="@string/title_activity_log"
         android:textIsSelectable="true"
         />
   </ScrollView>
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
-      android:id="@+id/nav_view"
+      android:id="@+id/navigationView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginEnd="0dp"
