--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,26 @@
     tools:context=".MainActivity"
     >
 
+  <androidx.appcompat.widget.Toolbar
+      android:id="@+id/my_toolbar"
+      android:theme="@style/ToolbarTheme"
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      android:background="?attr/colorPrimary"
+      android:elevation="4dp"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+      />
+
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="@dimen/activity_horizontal_margin"
       android:layout_marginLeft="@dimen/activity_horizontal_margin"
       android:layout_marginTop="0dp"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/my_toolbar"
       app:layout_constraintBottom_toTopOf="@+id/navigationView"
       >
 
