--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,15 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <!-- "Mark Favorite", should appear as action button if possible -->
   <item
       android:id="@+id/action_vibrate"
       android:title="@string/action_vibrate"
-      app:showAsAction="never"/>
+      app:showAsAction="never"
+  />
 
-  <!-- Settings, should always be in the overflow -->
-  <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+  <item
+      android:id="@+id/action_notify"
+      android:title="@string/action_notify"
+      app:showAsAction="never"
+  />
+
+  <item
+      android:id="@+id/action_settings"
+      android:title="@string/action_settings"
+      app:showAsAction="never"
+  />
 
 </menu>
