Proof of concept: user signin + write dailyActivities to Cloud Firestore
For the time being, these DB access rules are stored in the Firebase Console:

rules_version = '2';
service cloud.firestore {
  match /databases/{database}/documents {
    // match /{document=**} {
    //   allow read, write: if request.auth.uid != null;
    // }

    match /users/{userId}/dailyActivities/{document=**} {
      // Only allow read/write access to documents belonging to the signed in user
      allow read, write: if request.auth.uid == userId;
    }
  }
}

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,6 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
+      android:id="@+id/action_sync_to_cloud"
+      android:title="@string/action_sync_to_cloud"
+      app:showAsAction="never"
+      />
+
+  <item
       android:id="@+id/action_vibrate"
       android:title="@string/action_vibrate"
       app:showAsAction="never"
