--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,6 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
+      android:id="@+id/action_record_walking"
+      android:title="@string/action_record_walking"
+      app:showAsAction="never"
+      />
+
+  <item
       android:id="@+id/action_sync_to_cloud"
       android:title="@string/action_sync_to_cloud"
       app:showAsAction="never"
