Move Activity Event Log to the 2nd bottom nav entry
The 3rd bottom nav entry will be used for developer logging and diagnosis.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,10 @@
       >
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/eventLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_activity_log"
+        android:text="@string/title_log"
         android:textIsSelectable="true"
         />
   </ScrollView>
