--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/my_toolbar"
-      android:theme="@style/ToolbarTheme"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
       android:background="?attr/colorPrimary"
       android:elevation="4dp"
-      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-      />
+      android:theme="@style/ToolbarTheme"
+      android:visibility="visible"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="@dimen/activity_horizontal_margin"
-      android:layout_marginLeft="@dimen/activity_horizontal_margin"
-      android:layout_marginTop="0dp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/my_toolbar"
       app:layout_constraintBottom_toTopOf="@+id/navigationView"
-      >
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/my_toolbar">
 
     <TextView
-        android:id="@+id/eventLog"
+        android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title_log"
-        android:textIsSelectable="true"
-        />
+        android:textIsSelectable="true" />
   </ScrollView>
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/developerLog"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toTopOf="@+id/navigationView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/navigationView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="0dp"
       android:layout_marginStart="0dp"
+      android:layout_marginEnd="0dp"
       android:background="?android:attr/windowBackground"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:menu="@menu/bottom_nav_menu"
-      />
+      app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
