Change copy and icons on main screen bottom navigation view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_log"
+        android:text="@string/navigation_title_log"
         android:textIsSelectable="true" />
   </ScrollView>
 
