--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:id="@+id/navigation_activity"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_activity"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/navigation_title_home"
     />
     <item
             android:id="@+id/navigation_events"
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_events"
+            android:icon="@drawable/ic_list_black_24dp"
+            android:title="@string/navigation_title_todays_activities"
     />
     <item
         android:id="@+id/navigation_log"
-        android:icon="@drawable/ic_list_black_24dp"
-        android:title="@string/title_log"
+        android:icon="@drawable/ic_bug_report_black_24dp"
+        android:title="@string/navigation_title_log"
     />
 </menu>
