--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -26,6 +26,11 @@
   />
 
   <item
+      android:id="@+id/action_settings"
+      android:title="@string/action_settings"
+      app:showAsAction="never"
+      />
+  <item
       android:id="@+id/action_about"
       android:title="@string/action_about"
       app:showAsAction="never"
