--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
   <androidx.appcompat.widget.Toolbar
-      android:id="@+id/my_toolbar"
+      android:id="@+id/main_toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="?attr/colorPrimary"
@@ -20,30 +20,62 @@
       app:layout_constraintTop_toTopOf="parent"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+  <LinearLayout
+      android:id="@+id/homeContainer"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:orientation="vertical"
+      app:layout_constraintBottom_toTopOf="@+id/navigationView"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/main_toolbar">
+
+    <TextView
+        android:id="@+id/currentStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="WALKING" />
+
+    <TextView
+        android:id="@+id/snoozeStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Snoozed until tomorrow" />
+
+    <Button
+        android:id="@+id/snoozeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="true"
+        tools:text="@string/main_activity_start_snooze" />
+
+  </LinearLayout>
+
   <ScrollView
+      android:id="@+id/todayContainer"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="@dimen/activity_horizontal_margin"
       app:layout_constraintBottom_toTopOf="@+id/navigationView"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/my_toolbar">
+      app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+      tools:visibility="gone">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/activities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/navigation_title_log"
         android:textIsSelectable="true" />
   </ScrollView>
 
   <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/developerLog"
+      android:id="@+id/logContainer"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@+id/navigationView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
+      app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+      tools:visibility="gone" />
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/navigationView"
