--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -14,6 +14,12 @@
       />
 
   <item
+      android:id="@+id/action_test_reminder"
+      android:title="@string/action_test_reminder"
+      app:showAsAction="never"
+      />
+
+  <item
       android:id="@+id/action_vibrate"
       android:title="@string/action_vibrate"
       app:showAsAction="never"
