--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <PreferenceCategory app:title="@string/settings_reminders">
+  <PreferenceCategory app:title="@string/settings_move_reminders">
+
+<!--
+    TODO Create single source of truth for the settings default values.
+          Currently default values are set here, but default values are also set
+          in the code when the values are read from SharedPreferences.
+          This could be accomplished by building the Preferences hierarchy in
+          code instead of in XML.
+
+          For more info. see:
+          https://developer.android.com/guide/topics/ui/settings/programmatic-hierarchy
+-->
 
     <SwitchPreferenceCompat
-        app:key="notify"
+        app:defaultValue="true"
+        app:key="@string/pref_key_notify"
         app:title="@string/settings_notification" />
+
+    <EditTextPreference
+      app:defaultValue="6"
+      app:key="@string/pref_key_reminder_start"
+      app:title="@string/settings_reminder_start" />
+
+    <EditTextPreference
+        app:defaultValue="22"
+        app:key="@string/pref_key_reminder_end"
+        app:title="@string/settings_reminder_end" />
 
     <Preference
         app:key="@string/pref_key_system_notification"
@@ -13,6 +35,7 @@
         app:title="@string/settings_customize_notification" />
 
     <SwitchPreferenceCompat
+        app:defaultValue="true"
         app:key="@string/pref_key_vibrate"
         app:title="@string/settings_vibrate" />
 
