Refactor: rename "user activity" to "movement"
Using "activity" was confusing because it has a very different
meaning in Android code.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
       tools:visibility="gone">
 
     <TextView
-        android:id="@+id/activities"
+        android:id="@+id/movements"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textIsSelectable="true" />
