--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,22 +50,32 @@
 
   </LinearLayout>
 
-  <ScrollView
-      android:id="@+id/todayContainer"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_marginStart="@dimen/activity_horizontal_margin"
-      app:layout_constraintBottom_toTopOf="@+id/navigationView"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/main_toolbar"
-      tools:visibility="gone">
+<!--  <ScrollView-->
+<!--      android:id="@+id/todayContainer"-->
+<!--      android:layout_width="match_parent"-->
+<!--      android:layout_height="0dp"-->
+<!--      android:layout_marginStart="@dimen/activity_horizontal_margin"-->
+<!--      app:layout_constraintBottom_toTopOf="@+id/navigationView"-->
+<!--      app:layout_constraintStart_toStartOf="parent"-->
+<!--      app:layout_constraintTop_toBottomOf="@id/main_toolbar"-->
+<!--      tools:visibility="gone">-->
 
-    <TextView
-        android:id="@+id/movements"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textIsSelectable="true" />
-  </ScrollView>
+<!--    <TextView-->
+<!--        android:id="@+id/movements"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textIsSelectable="true" />-->
+<!--  </ScrollView>-->
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/movementContainer"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toTopOf="@+id/navigationView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+      tools:visibility="gone" />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/logContainer"
