--- a/app/src/main/res/layout/movement_item.xml
+++ b/app/src/main/res/layout/movement_item.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:orientation="horizontal">
+
+  <ImageView
+      android:id="@+id/movementIcon"
+      android:layout_width="36dp"
+      android:layout_height="36dp" />
 
   <TextView
-      android:id="@+id/movementItem"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
+      android:id="@+id/duration"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_marginLeft="16dp"
+      android:gravity="center_vertical"
+      android:textAppearance="@android:style/TextAppearance.Material.Title" />
+
+  <TextView
+      android:id="@+id/startTime"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_marginLeft="16dp"
+      android:layout_weight="1"
+      android:gravity="center_vertical|end"
+      android:textAppearance="@android:style/TextAppearance.Material.Title" />
+
 </LinearLayout>
